--- a/cursos-ingles.html
+++ b/cursos-ingles.html
@@ -20,11 +20,11 @@
         <nav>
             <ul>
                 <li><a href="index-ingles.html#quienes-somos">About us</a></li>
-                <li><a href="index-ingles.html#filosofia">Philosophy Ñ</a></li>
-                <li><a href="index-ingles.html#azul">Azul</a></li>
+                <li><a href="index-ingles.html#filosofia">Ñ philosophy</a></li>
+                <li><a href="azul-ingles.html">Azul</a></li>
                 <li><a href="cursos-ingles.html">Courses</a></li>
                 <li><a href="alojamiento-ingles.html">Accommodations</a></li>
-                <li><a href="#">Prices and calendar</a></li>
+                <li><a href="precios-ingles.html">Prices and calendar</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
           
@@ -51,6 +51,7 @@
 <section class="quienes-somos" >
     <h3>SIELE EXAM</h3>
     <H2>International Spanish Language Evaluation Service </H2>
+    <section id="siele"></section>
     <P>It is promoted by the Cervantes Institute, the National Autonomous University of Mexico (UNAM), the University of Salamanca (USAL) and the University of Buenos Aires (UBA)</P>
   
 </section>
@@ -92,7 +93,7 @@
 
 <div class="contenedor-tablas">
     <div class="tabla1">
-<table>
+<table class="table">
     <h3 class="titulo-tabla">1st WEEK</h3>
     <!-- Cuerpo de la tabla -->
     <tbody>
@@ -154,7 +155,7 @@
 </div>
 
 <div class="tabla1">
-  <table>
+  <table class="table">
     <h3 class="titulo-tabla">2st WEEK</h3>
     <!-- Cuerpo de la tabla -->
     <tbody>
