--- a/cursos-portugues.html
+++ b/cursos-portugues.html
@@ -21,10 +21,10 @@
             <ul>
                 <li><a href="index-portugues.html#quienes-somos">Quem somos</a></li>
                 <li><a href="index-portugues.html#filosofia">Filosofía Ñ</a></li>
-                <li><a href="index-portugues.html#azul">Azul</a></li>
+                <li><a href="azul-portugues.html">Azul</a></li>
                 <li><a href="cursos-portugues.html">Cursos</a></li>
                 <li><a href="alojamiento-ingles.html">Acomodações</a></li>
-                <li><a href="#">Preços e calendário</a></li>
+                <li><a href="precios-portugues.html">Preços e calendário</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
           
@@ -51,6 +51,7 @@
 <section class="quienes-somos" >
     <h3>EXAME SIELE</h3>
     <H2>Serviço Internacional de Avaliação da Língua Espanhola</H2>
+    <section id="siele"></section>
     <P>É promovido pelo Instituto Cervantes, pela Universidade Nacional Autônoma do México (UNAM), pela Universidade de Salamanca (USAL) e pela Universidade de Buenos Aires (UBA).</P>
 
 </section>
@@ -92,7 +93,7 @@
 
 <div class="contenedor-tablas">
     <div class="tabla1">
-<table>
+<table class="table">
     <h3 class="titulo-tabla">1° SEMANA</h3>
     <!-- Cuerpo de la tabla -->
     <tbody>
@@ -154,14 +155,14 @@
 </div>
 
 <div class="tabla1">
-  <table>
+  <table class="table">
     <h3 class="titulo-tabla">2° SEMANA</h3>
     <!-- Cuerpo de la tabla -->
     <tbody>
       <!-- Primera fila de datos -->
       <tr>
         <td>Domingo</td>
-        <td>Tour a las sierras de Tandil</td>   
+        <td>Passeio às montanhas de Tandil</td>   
       </tr>
       <!-- Segunda fila de datos -->
       <tr>
