--- a/index-portugues.html
+++ b/index-portugues.html
@@ -21,10 +21,10 @@
             <ul>
                 <li><a href="#quienes-somos">Quem somos</a></li>
                 <li><a href="#filosofia">Ñ Filosofía</a></li>
-                <li><a href="#azul">Azul</a></li>
+                <li><a href="azul-portugues.html">Azul</a></li>
                 <li><a href="cursos-portugues.html">Cursos</a></li>
-                <li><a href="#">Acomodações</a></li>
-                <li><a href="#">Preços e calendário</a></li>
+                <li><a href="alojamiento-portugues.html">Acomodações</a></li>
+                <li><a href="precios-portugues.html">Preços e calendário</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
@@ -109,6 +109,10 @@
             <img src="./img/quijote.jpg" alt="">
         </section>
 
+        <section class="seccion-vacia">
+            <div class="seccion-vacia"></div>
+        </section>
+
 
         <section class="zona5">
             <div class="contenedor-textos">
@@ -116,6 +120,10 @@
                 <p>APROVEITE NOSSAS ATIVIDADES</p>
                 <a class="boton" href="#">MAIS INFORMAÇÃO</a>
             </div>
+        </section>
+
+        <section class="seccion-vacia">
+            <div class="seccion-vacia"></div>
         </section>
 
         <section class="zona3">
@@ -126,7 +134,8 @@
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere dicta ut dolores, dignissimos est pariatur quod. Accusamus, est hic! Quisquam quaerat quam ducimus rem commodi, eos enim dicta rerum exercitationem?
                     Rem corrupti iste quisquam dolor. Similique iusto reprehenderit magnam provident!</p>
                 </div>
-                <div class="botom"><botom>MAIS INFORMAÇÃO</botom></div>
+                <a href="cursos-portugues.html#siele"><div class="botom"><botom>MAIS INFORMAÇÃO</botom></div></a> 
+                
             </div>
             
         </section>
