--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
             <ul>
                 <li><a href="#quienes-somos">Quienes somos</a></li>
                 <li><a href="#filosofia">Filosofía Ñ</a></li>
-                <li><a href="#azul">Azul</a></li>
+                <li><a href="azul.html">Azul</a></li>
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="alojamiento.html">Alojamientos</a></li>
-                <li><a href="#">Precios y calendario</a></li>
+                <li><a href="precios.html">Precios y calendario</a></li>
                 <li><a href="#">Contacto</a></li>
             </ul>
           
@@ -111,6 +111,9 @@
             <img src="./img/quijote.jpg" alt="">
         </section>
 
+        <section class="seccion-vacia">
+            <div class="seccion-vacia"></div>
+        </section>        
 <!-----zona5----->    
 
         <section class="zona5">
@@ -121,6 +124,10 @@
             </div>
         </section>
 
+        <section class="seccion-vacia">
+            <div class="seccion-vacia"></div>
+        </section>
+
 <!-----zona6----->    
 
         <section class="zona3">
@@ -129,9 +136,10 @@
                 <div class="div1-zona3">
                     <h2>TE PREPARAMOS PARA EL EXAMEN SIELE</H2>
                     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Facere dicta ut dolores, dignissimos est pariatur quod. Accusamus, est hic! Quisquam quaerat quam ducimus rem commodi, eos enim dicta rerum exercitationem?
-                    Rem corrupti iste quisquam dolor. Similique iusto reprehenderit magnam provident!</p>
+                    Rem corrupti iste quisquam dolor. Similique iusto reprehenderit magnam pr
+                    ovident!</p>
                 </div>
-                <div class="botom"><botom>MÁS INFORMACIÓN</botom></div>
+               <a href="cursos.html#siele"><div class="botom"><botom>MÁS INFORMACIÓN</botom></div></a> 
             </div>
             
         </section>
