--- a/azul-ingles.html
+++ b/azul-ingles.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="index-ingles.html"><img class="logo" src="./img/Logo - Original - 5000x5000.png" alt=""></a>
+        <a href="index-ingles.html"><img class="logo" src="./img/isologo-experimenteele.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index-ingles.html#quienes-somos">About us</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="cursos-ingles.html">Courses</a></li>
                 <li><a href="alojamiento-ingles.html">Accommodations</a></li>
                 <li><a href="precios-ingles.html">Prices and calendar</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contacto-ingles.html">Contact</a></li>
             </ul>
           
         </nav>
