--- a/cursos-portugues.html
+++ b/cursos-portugues.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="index-portugues.html"><img class="logo" src="./img/Logo - Original - 5000x5000.png" alt=""></a>
+        <a href="index-portugues.html"><img class="logo" src="./img/isologo-experimenteele.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index-portugues.html#quienes-somos">Quem somos</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="cursos-portugues.html">Cursos</a></li>
                 <li><a href="alojamiento-ingles.html">Acomodações</a></li>
                 <li><a href="precios-portugues.html">Preços e calendário</a></li>
-                <li><a href="#">Contato</a></li>
+                <li><a href="contacto-portugues.html">Contato</a></li>
             </ul>
           
         </nav>
