--- a/azul.html
+++ b/azul.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="./img/Logo - Original - 5000x5000.png" alt=""></a>
+        <a href="index.html"><img class="logo" src="./img/isologo-experimenteele.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index.html#quienes-somos">Quienes somos</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="alojamiento.html">Alojamientos</a></li>
                 <li><a href="precios.html">Precios y calendario</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
           
         </nav>
@@ -42,7 +42,7 @@
             
       <section class="cabecera-azul" >
         <h3>AZUL - ARGENTINA</h3>
-        <H2>Ciudad Cervantina de la Argenntina</H2>
+        <H2>Ciudad Cervantina de la Argentina</H2>
         <P>A solo 300kms. de Buenos Aires, la ciudad de Azul se caracteriza por Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quibusdam soluta sunt quam. Animi cupiditate impedit minima aperiam deleniti necessitatibus fuga quas ipsa consequatur quasi, placeat quam natus, accusantium culpa provident.</P>  
       </section>
 
