--- a/cursos.html
+++ b/cursos.html
@@ -16,7 +16,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html"><img class="logo" src="./img/Logo - Original - 5000x5000.png" alt=""></a>
+        <a href="index.html"><img class="logo" src="./img/isologo-experimenteele.png" alt=""></a>
         <nav>
             <ul>
                 <li><a href="index.html#quienes-somos">Quienes somos</a></li>
@@ -25,7 +25,7 @@
                 <li><a href="cursos.html">Cursos</a></li>
                 <li><a href="alojamiento.html">Alojamientos</a></li>
                 <li><a href="precios.html">Precios y calendario</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="contacto.html">Contacto</a></li>
             </ul>
           
         </nav>
